# shifu-ai

./: index.html  package-lock.json  package.json
api/: Cargo.toml  docker-compose.yml
api/src/: app.rs  main.rs
api/src/handlers/: hello.rs  mod.rs  pinyin.rs  pronounce.rs
src/: App.tsx
src/routes/: Home.tsx  Pronounce.tsx
